--- a/vignettes/bang-hef-vignette.Rmd
+++ b/vignettes/bang-hef-vignette.Rmd
@@ -18,21 +18,24 @@ knitr::opts_chunk$set(comment = "#>", collapse = TRUE)
 
 The *bang* package simulates from the posterior distributions involved in certain Bayesian models.  See the vignette [Introducing bang: Bayesian Analysis, No Gibbs](bang-vignette.html) for more information.  In this vignette we consider the Bayesian analysis of certain conjugate hierarchical models.  We give only a brief outline of the structure of these models.  For a full description see Chapter 5 of @BDA2014.
 
-Suppose that, for $j = 1, \ldots, J$, experiment $j$ of $J$ experiments yields a data vector $Y_j$ and associated parameter vector $\theta_j$.  Conditional on $\theta_j$ the data $Y_j$ are assumed to follow independent response distributions from the exponential family of probability distributions.  A prior distribution $\pi(\theta \mid \psi)$ is placed on the *population parameters* $\theta_1, \ldots, \theta_J$, where $\psi$ is a vector of hyperparameters.  For mathematical convenience $\pi(\theta \mid \psi)$ is selected to be *conditionally conjugate*, that is, conditionally on $\psi$ the posterior distribution of $\theta_j$ of the same type as $\pi(\theta \mid \psi)$.  We consider two examples.
+Suppose that, for $j = 1, \ldots, J$, experiment $j$ of $J$ experiments yields a data vector $Y_j$ and associated parameter vector $\theta_j$.  Conditional on $\theta_j$ the data $Y_j$ are assumed to follow independent response distributions from the exponential family of probability distributions.  A prior distribution $\pi(\theta_j \mid \psi)$ is placed on each of the *population parameters* $\theta_1, \ldots, \theta_J$, where $\psi$ is a vector of hyperparameters.  For mathematical convenience $\pi(\theta_j \mid \psi)$ is selected to be *conditionally conjugate*, that is, conditionally on $\psi$ the posterior distribution of $\theta_j$ of the same type as $\pi(\theta_j \mid \psi)$. 
+
+Use of a conditionally conjugate prior means that it is possible to derive, and simulate from, the marginal posterior density $\pi(\psi \mid \boldsymbol{\mathbf{y}})$.  The `hef` function does this using the generalized ratio-of-uniforms method (specifically, the function `ru` in the *rust* package [@rust]).  By default a model-specific transformation of the parameter vector $\psi$ is used to improve efficiency.  See the documentation of `hef` and the two examples below for details.  Simulation from the full posterior density $\pi(\boldsymbol{\mathbf{\theta}}, \psi \mid \boldsymbol{\mathbf{y}}) = \pi(\boldsymbol{\mathbf{\theta}} \mid \psi, \boldsymbol{\mathbf{y}}) \pi(\psi \mid \boldsymbol{\mathbf{y}})$ follows directly because conditional conjugacy means that it is simple to simulate from $\pi(\boldsymbol{\mathbf{\theta}} \mid \psi, \boldsymbol{\mathbf{y}})$.
 
 ## Beta-binomial model
 
 We consider the example presented in Section 5.3 of @BDA2014, in which the data [@Tarone1982] in the matrix `rat` are analysed.  These data contain information about an experiment in which, for each of 71 groups of rats, the total number of rats in the group and the numbers of rats who develop a tumor is recorded, so that $J = 71$. Conditional on $\boldsymbol{\mathbf{\theta}} = (\theta_1, \ldots, \theta_J) = (p_1, \ldots, p_J)$ we assume independent binomial distributions for $(Y_1, \ldots, Y_J)$, that is, $Y_j \sim {\rm binomial}(n_j, p_j)$.  We use the conditionally conjugate priors $p_j \sim {\rm Beta}(\alpha, \beta)$, so that $\psi = (\alpha, \beta)$.
 
-The conditional conjagacy of the priors means that the marginal posterior of $(\alpha, \beta)$ given $\boldsymbol{\mathbf{y}} = (y_1, \ldots, y_J)$ can be determined as 
+The conditional conjagacy of the priors means that the marginal posterior of $(\alpha, \beta)$ given $\boldsymbol{\mathbf{y}} = (y_1, \ldots, y_J)$ can be determined (equation (5.8) of @BDA2014) as 
 \[ \pi(\alpha, \beta \mid \boldsymbol{\mathbf{y}}) \propto \pi(\alpha, \beta) 
 \prod_{j=1}^J \frac{B(\alpha + y_j, \beta + n_j - y_j)}{B(\alpha, \beta)}, \]
-where $\pi(\alpha, \beta)$ is the hyperprior density for $(\alpha, \beta)$. See equation (5.8) @BDA2014.
-To simulate from the full posterior $\pi(\boldsymbol{\mathbf{\theta}}, \alpha, \beta \mid \boldsymbol{\mathbf{y}}) = \pi(\boldsymbol{\mathbf{\theta}} \mid \alpha, \beta, \boldsymbol{\mathbf{y}}) \pi(\alpha, \beta \mid \boldsymbol{\mathbf{y}})$ we first sample from $\pi(\alpha, \beta \mid \boldsymbol{\mathbf{y}})$.  Simulation from the conditional posterior distribution of $\boldsymbol{\mathbf{\theta}}$ given $(\alpha, \beta, \boldsymbol{\mathbf{y}})$ is straightforward on noting that 
+where $\pi(\alpha, \beta)$ is the hyperprior density for $(\alpha, \beta)$. 
+
+To simulate from the full posterior density $\pi(\boldsymbol{\mathbf{\theta}}, \alpha, \beta \mid \boldsymbol{\mathbf{y}}) = \pi(\boldsymbol{\mathbf{\theta}} \mid \alpha, \beta, \boldsymbol{\mathbf{y}}) \pi(\alpha, \beta \mid \boldsymbol{\mathbf{y}})$ we first sample from $\pi(\alpha, \beta \mid \boldsymbol{\mathbf{y}})$.  Simulation from the conditional posterior distribution of $\boldsymbol{\mathbf{\theta}}$ given $(\alpha, \beta, \boldsymbol{\mathbf{y}})$ is then straightforward on noting that 
 \[ \theta_j \mid \alpha, \beta, y_j \sim {\rm beta}(\alpha + y_j, \beta + n_j - y_j) \]
 and that $\theta_j, j = 1, \ldots, J$ are conditionally independent.
 
-The function `hef` simulates from the full posterior performing simulation from $\pi(\alpha, \beta \mid \boldsymbol{\mathbf{y}})$ using the generalized ratio-of-uniforms method (specifically, the function `ru` in the *rust* package [@rust]).  By default a model-specific transformation of the parameter vector $\psi = (\alpha, \beta)$ is used to improve efficiency.  See the documentation of `hef` for details.
+The function `hef` simulates from the full posterior performing simulation from $\pi(\alpha, \beta \mid \boldsymbol{\mathbf{y}})$ using the generalized ratio-of-uniforms method (specifically, the function `ru` in the *rust* package [@rust]).  By default the $\psi = (\alpha, \beta)$ is transformed prior to sampling using $(\rho_1, \rho_2)=(\log (\alpha/\beta), \log (\alpha+\beta))$. The aim of this is to improve efficiency by rotating and scaling the (mode-relocated) conditional posterior density in an attempt to produce near circularity of this density's contours.    
 
 ```{r, fig.show='hold', fig.width = 3.45, fig.height = 3.45}
 library(bang)
@@ -42,7 +45,7 @@ plot(rat_res)
 plot(rat_res, ru_scale = TRUE)
 ```
 
-The plot on the left shows the values sampled from the posterior distribution of $(\alpha, \beta)$ with superimposed density contours.  On the right is a similar plot displayed on the scale used for sampling, $(\rho_1, \rho_2)=(\log (\alpha/\beta), \log (\alpha+\beta))$, after relocation of the posterior mode to the origin and rotation and scaling in an attempt to produce near circularity of the density contours.  
+The plot on the left shows the values sampled from the posterior distribution of $(\alpha, \beta)$ with superimposed density contours.  On the right is a similar plot displayed on the scale used for sampling, that is, $(\rho_1, \rho_2)$.  
 
 The following summary is of properties of the generalized ratio-of uniforms algorithm, in particular the probability of acceptance, and summary statistics of the posterior sample of $(\alpha, \beta)$.
 
