--- a/vignettes/bang-hef-vignette.Rmd
+++ b/vignettes/bang-hef-vignette.Rmd
@@ -19,19 +19,19 @@ set.seed(47)
 
 The *bang* package simulates from the posterior distributions involved in certain Bayesian models.  See the vignette [Introducing bang: Bayesian Analysis, No Gibbs](bang-vignette.html) for an introduction.  In this vignette we consider the Bayesian analysis of certain conjugate hierarchical models.  We give only a brief outline of the structure of these models.  For a full description see Chapter 5 of @BDA2014.
 
-Suppose that, for $j = 1, \ldots, J$, experiment $j$ of $J$ experiments yields a data vector $Y_j$ and associated parameter vector $\theta_j$.  Conditional on $\theta_j$ the data $Y_j$ are assumed to follow independent response distributions from the exponential family of probability distributions.  A prior distribution $\pi(\theta_j \mid \psi)$ is placed on each of the *population parameters* $\theta_1, \ldots, \theta_J$, where $\psi$ is a vector of hyperparameters.  For mathematical convenience $\pi(\theta_j \mid \psi)$ is selected to be *conditionally conjugate*, that is, conditionally on $\psi$ the posterior distribution of $\theta_j$ of the same type as $\pi(\theta_j \mid \psi)$. 
+Suppose that, for $j = 1, \ldots, J$, experiment $j$ of $J$ experiments yields a data vector $Y_j$ and associated parameter vector $\theta_j$.  Conditional on $\theta_j$ the data $Y_j$ are assumed to follow independent response distributions from the exponential family of probability distributions.  A prior distribution $\pi(\theta_j \mid \phi)$ is placed on each of the *population parameters* $\theta_1, \ldots, \theta_J$, where $\phi$ is a vector of hyperparameters.  For mathematical convenience $\pi(\theta_j \mid \phi)$ is selected to be *conditionally conjugate*, that is, conditionally on $\phi$ the posterior distribution of $\theta_j$ of the same type as $\pi(\theta_j \mid \phi)$. 
 
-Use of a conditionally conjugate prior means that it is possible to derive, and simulate from, the marginal posterior density $\pi(\psi \mid \boldsymbol{\mathbf{y}})$.  The `hef` function does this using the generalized ratio-of-uniforms method, implemented by the function `ru` in the *rust* package [@rust]).  By default a model-specific transformation of the parameter vector $\psi$ is used to improve efficiency.  See the documentation of `hef` and the two examples below for details.  Simulation from the full posterior density $\pi(\boldsymbol{\mathbf{\theta}}, \psi \mid \boldsymbol{\mathbf{y}}) = \pi(\boldsymbol{\mathbf{\theta}} \mid \psi, \boldsymbol{\mathbf{y}}) \pi(\psi \mid \boldsymbol{\mathbf{y}})$ follows directly because conditional conjugacy means that it is simple to simulate from $\pi(\boldsymbol{\mathbf{\theta}} \mid \psi, \boldsymbol{\mathbf{y}})$, given the values simulated from $\pi(\psi \mid \boldsymbol{\mathbf{y}})$.  The simulation is performed in the function `hef`.
+Use of a conditionally conjugate prior means that it is possible to derive, and simulate from, the marginal posterior density $\pi(\phi \mid \boldsymbol{\mathbf{y}})$.  The `hef` function does this using the generalized ratio-of-uniforms method, implemented by the function `ru` in the *rust* package [@rust]).  By default a model-specific transformation of the parameter vector $\phi$ is used to improve efficiency.  See the documentation of `hef` and the two examples below for details.  Simulation from the full posterior density $\pi(\boldsymbol{\mathbf{\theta}}, \phi \mid \boldsymbol{\mathbf{y}}) = \pi(\boldsymbol{\mathbf{\theta}} \mid \phi, \boldsymbol{\mathbf{y}}) \pi(\phi \mid \boldsymbol{\mathbf{y}})$ follows directly because conditional conjugacy means that it is simple to simulate from $\pi(\boldsymbol{\mathbf{\theta}} \mid \phi, \boldsymbol{\mathbf{y}})$, given the values simulated from $\pi(\phi \mid \boldsymbol{\mathbf{y}})$.  The simulation is performed in the function `hef`.
 
 ## Beta-binomial model
 
-We consider the example presented in Section 5.3 of @BDA2014, in which the data [@Tarone1982] in the matrix `rat` are analysed.  These data contain information about an experiment in which, for each of 71 groups of rats, the total number of rats in the group and the numbers of rats who develop a tumor is recorded, so that $J = 71$. Conditional on $\boldsymbol{\mathbf{\theta}} = (\theta_1, \ldots, \theta_J) = (p_1, \ldots, p_J)$ we assume independent binomial distributions for $(Y_1, \ldots, Y_J)$, that is, $Y_j \sim {\rm binomial}(n_j, p_j)$.  We use the conditionally conjugate priors $p_j \sim {\rm Beta}(\alpha, \beta)$, so that $\psi = (\alpha, \beta)$.
+We consider the example presented in Section 5.3 of @BDA2014, in which the data [@Tarone1982] in the matrix `rat` are analysed.  These data contain information about an experiment in which, for each of 71 groups of rats, the total number of rats in the group and the numbers of rats who develop a tumor is recorded, so that $J = 71$. Conditional on $\boldsymbol{\mathbf{\theta}} = (\theta_1, \ldots, \theta_J) = (p_1, \ldots, p_J)$ we assume independent binomial distributions for $(Y_1, \ldots, Y_J)$, that is, $Y_j \sim {\rm binomial}(n_j, p_j)$.  We use the conditionally conjugate priors $p_j \sim {\rm Beta}(\alpha, \beta)$, so that $\phi = (\alpha, \beta)$.
 
 The conditional conjagacy of the priors means that the marginal posterior of $(\alpha, \beta)$ given $\boldsymbol{\mathbf{y}} = (y_1, \ldots, y_J)$ can be determined (equation (5.8) of @BDA2014) as 
 \[ \pi(\alpha, \beta \mid \boldsymbol{\mathbf{y}}) \propto \pi(\alpha, \beta) 
 \prod_{j=1}^J \frac{B(\alpha + y_j, \beta + n_j - y_j)}{B(\alpha, \beta)}, \]
 where $\pi(\alpha, \beta)$ is the hyperprior density for $(\alpha, \beta)$. 
-By default $\psi = (\alpha, \beta)$ is transformed prior to sampling using $(\rho_1, \rho_2)=(\log (\alpha/\beta), \log (\alpha+\beta))$. The aim of this is to improve efficiency by rotating and scaling the (mode-relocated) conditional posterior density in an attempt to produce near circularity of this density's contours.    
+By default $\phi = (\alpha, \beta)$ is transformed prior to sampling using $(\rho_1, \rho_2)=(\log (\alpha/\beta), \log (\alpha+\beta))$. The aim of this is to improve efficiency by rotating and scaling the (mode-relocated) conditional posterior density in an attempt to produce near circularity of this density's contours.    
 
 To simulate from the full posterior density $\pi(\boldsymbol{\mathbf{\theta}}, \alpha, \beta \mid \boldsymbol{\mathbf{y}}) = \pi(\boldsymbol{\mathbf{\theta}} \mid \alpha, \beta, \boldsymbol{\mathbf{y}}) \pi(\alpha, \beta \mid \boldsymbol{\mathbf{y}})$ we first sample from $\pi(\alpha, \beta \mid \boldsymbol{\mathbf{y}})$.  Simulation from the conditional posterior distribution of $\boldsymbol{\mathbf{\theta}}$ given $(\alpha, \beta, \boldsymbol{\mathbf{y}})$ is then straightforward on noting that 
 \[ \theta_j \mid \alpha, \beta, y_j \sim {\rm beta}(\alpha + y_j, \beta + n_j - y_j) \]
@@ -63,7 +63,7 @@ We perform a fully Bayesian analysis of an empirical Bayesian example presented 
 pump
 ```
 
-The general setup is similar to the beta-binomial model described above but now the response distribution is taken to be Poisson, the prior distribution is gamma and $J = 10$.  For $j = 1, \ldots, J$ let $Y_j$ denote the number of failures and $e_j$ the length of operating time for pump system $j$.  Conditional on $\boldsymbol{\mathbf{\lambda}} = (\lambda_1, \ldots, \lambda_J)$ we assume independent Poisson distributions for $(Y_1, \ldots, Y_J)$ with means that are proportional to the *exposure* time $e_j$, that is, $Y_j \sim {\rm Poisson}(e_j \lambda_j)$.  We use the conditionally conjugate priors $\lambda_j \sim {\rm gamma}(\alpha, \beta)$, so that $\psi = (\alpha, \beta)$.  We use the parameterization where $\beta$ is a rate parameter, so that ${\rm E}(\lambda_j) = \alpha/\beta$ *a priori*.
+The general setup is similar to the beta-binomial model described above but now the response distribution is taken to be Poisson, the prior distribution is gamma and $J = 10$.  For $j = 1, \ldots, J$ let $Y_j$ denote the number of failures and $e_j$ the length of operating time for pump system $j$.  Conditional on $\boldsymbol{\mathbf{\lambda}} = (\lambda_1, \ldots, \lambda_J)$ we assume independent Poisson distributions for $(Y_1, \ldots, Y_J)$ with means that are proportional to the *exposure* time $e_j$, that is, $Y_j \sim {\rm Poisson}(e_j \lambda_j)$.  We use the conditionally conjugate priors $\lambda_j \sim {\rm gamma}(\alpha, \beta)$, so that $\phi = (\alpha, \beta)$.  We use the parameterization where $\beta$ is a rate parameter, so that ${\rm E}(\lambda_j) = \alpha/\beta$ *a priori*.
 
 The marginal posterior of $(\alpha, \beta)$ given $\boldsymbol{\mathbf{y}} = (y_1, \ldots, y_J)$ can be determined as 
 \[ \pi(\alpha, \beta \mid \boldsymbol{\mathbf{y}}) \propto \pi(\alpha, \beta) 
