--- a/README.Rmd
+++ b/README.Rmd
@@ -17,6 +17,8 @@ knitr::opts_chunk$set(
 [![AppVeyor Build Status](https://ci.appveyor.com/api/projects/status/github/paulnorthrop/bang?branch=master&svg=true)](https://ci.appveyor.com/project/paulnorthrop/bang)
 [![Coverage Status](https://codecov.io/github/paulnorthrop/bang/coverage.svg?branch=master)](https://codecov.io/github/paulnorthrop/bang?branch=master)
 [![CRAN_Status_Badge](https://www.r-pkg.org/badges/version/bang)](https://cran.r-project.org/package=bang)
+[![Downloads (monthly)](https://cranlogs.r-pkg.org/badges/bang?color=brightgreen)](https://cran.r-project.org/package=bang)
+[![Downloads (total)](https://cranlogs.r-pkg.org/badges/grand-total/bang?color=brightgreen)](https://cran.r-project.org/package=bang)
 
 ### Bayesian Analysis, No Gibbs
 
