--- a/README.Rmd
+++ b/README.Rmd
@@ -16,7 +16,7 @@ knitr::opts_chunk$set(
 
 [![AppVeyor Build Status](https://ci.appveyor.com/api/projects/status/github/paulnorthrop/bang?branch=master&svg=true)](https://ci.appveyor.com/project/paulnorthrop/bang)
 [![R-CMD-check](https://github.com/paulnorthrop/bang/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/paulnorthrop/bang/actions/workflows/R-CMD-check.yaml)
-[![Coverage Status](https://codecov.io/github/paulnorthrop/bang/coverage.svg?branch=master)](https://codecov.io/github/paulnorthrop/bang?branch=master)
+[![Coverage Status](https://codecov.io/github/paulnorthrop/bang/coverage.svg?branch=master)](https://app.codecov.io/github/paulnorthrop/bang?branch=master)
 [![CRAN_Status_Badge](https://www.r-pkg.org/badges/version/bang)](https://cran.r-project.org/package=bang)
 [![Downloads (monthly)](https://cranlogs.r-pkg.org/badges/bang?color=brightgreen)](https://cran.r-project.org/package=bang)
 [![Downloads (total)](https://cranlogs.r-pkg.org/badges/grand-total/bang?color=brightgreen)](https://cran.r-project.org/package=bang)
@@ -29,7 +29,7 @@ Provides functions for the Bayesian analysis of some simple commonly-used models
 
 ### A simple example
 
-The `hef` function samples from the posterior distribution of the parameters of certain hierarchical exponential family models.  The following code performs essentially the same analysis of the rat tumor data using a beta-binomial hierarchical model that appears in Section 5.3 of Gelman, A., Carlin, J. B., Stern, H. S. Dunson, D. B., Vehtari, A. and Rubin, D. B. (2014) Bayesian Data Analysis. Chapman & Hall / CRC. <http://www.stat.columbia.edu/~gelman/book>.
+The `hef` function samples from the posterior distribution of the parameters of certain hierarchical exponential family models.  The following code performs essentially the same analysis of the rat tumor data using a beta-binomial hierarchical model that appears in Section 5.3 of Gelman, A., Carlin, J. B., Stern, H. S. Dunson, D. B., Vehtari, A. and Rubin, D. B. (2014) Bayesian Data Analysis. Chapman & Hall / CRC. <http://www.stat.columbia.edu/~gelman/book/>.
 
 ```{r example, eval = FALSE}
 library(bang)
