--- a/vignettes/bang.bib
+++ b/vignettes/bang.bib
@@ -170,7 +170,7 @@ url="https://doi.org/10.1175/JCLI-D-14-00265.1"
 
 @article{GoM1987,
  ISSN = {00401706},
- doi = {https://doi.org/10.2307/2530304},
+ doi = {10.2307/2530304},
  abstract = {A collection of I similar items generates point event histories; for example, machines experience failures or operators make mistakes. Suppose the intervals between events are modeled as iid exponential (λ <sub>i</sub>), or the counts as Poisson (λ <sub>i</sub>t<sub>i</sub>), for the ith item. Furthermore, so as to represent between-item variability, each individual rate parameter λ <sub>i</sub>, is presumed drawn from a fixed (super) population with density g<sub>λ</sub>(·;θ), θ being a vector parameter: a parametric empirical Bayes (PEB) setup. For g<sub>λ</sub>, specified alternatively as long-Student t(n) or gamma, we exhibit the results of numerical procedures for estimating superpopulation parameters θ and for describing pooled estimates of the individual rates λ <sub>i</sub>, obtained via Bayes's formula. Three data sets are analyzed, and convenient explicit approximate formulas are furnished for λ <sub>i</sub> estimates. In the Student-t case, the individual estimates are seen to have a robust quality.},
  author = {Donald P. Gaver and I. G. O'Muircheartaigh},
  journal = {Technometrics},
